--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "pubsub-js": "^1.9.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-github-fork-ribbon": "^0.7.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "turf": "^3.0.14",
